# hometax-macro-simple

./: .gitignore  LICENSE  README.md  build.ps1  build.sh  hometax_macro_simple.spec  pyproject.toml
data/: sample.xlsx
hometax_macro_simple/: __main__.py  exception.py  gui.py  macro.py  record.py  webdriver.py
tests/: file.py
